// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`input/text-field should render a TextField 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-2 {
  position: relative;
  border: 1px solid rgba(0, 0, 0, .25);
  border-radius: 1rem;
  box-sizing: border-box;
  height: 3rem;
  font-size: 16px;
  padding: 1rem;
  -webkit-transition: border ease-in 0.25s;
  transition: border ease-in 0.25s;
}

.emotion-2:focus,
.emotion-2:hover {
  outline: unset;
  border-color: #F1694B;
  box-shadow: 0 2px 4px 0 rgba(241,105,75,0.15);
}

.emotion-2:disabled {
  pointer-events: none;
  background-color: rgba(154,152,151,0.15);
}

.emotion-2:-moz-read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-2:read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

<div>
  <div
    class="emotion-0"
    value="Default value"
  >
    <div
      class="emotion-1"
    >
      <input
        class="emotion-2"
        value="Default value"
      />
    </div>
  </div>
</div>
`;

exports[`input/text-field should render a TextField with a char counter 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-2 {
  position: relative;
  border: 1px solid rgba(0, 0, 0, .25);
  border-radius: 1rem;
  box-sizing: border-box;
  height: 3rem;
  font-size: 16px;
  padding: 1rem;
  -webkit-transition: border ease-in 0.25s;
  transition: border ease-in 0.25s;
}

.emotion-2:focus,
.emotion-2:hover {
  outline: unset;
  border-color: #F1694B;
  box-shadow: 0 2px 4px 0 rgba(241,105,75,0.15);
}

.emotion-2:disabled {
  pointer-events: none;
  background-color: rgba(154,152,151,0.15);
}

.emotion-2:-moz-read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-2:read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-3 {
  color: rgba(154,152,151,0.85);
  font-size: 12px;
  margin: 0;
  text-align: right;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

<div>
  <div
    class="emotion-0"
    value="Default value"
  >
    <div
      class="emotion-1"
    >
      <input
        class="emotion-2"
        value="Default value"
      />
    </div>
    <div
      style="display: flex;"
    >
      <div
        style="flex: 1;"
      />
      <p
        class="emotion-3"
        color="grey.400"
      >
        13
      </p>
    </div>
  </div>
</div>
`;

exports[`input/text-field should render a TextField with a helper 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-2 {
  position: relative;
  border: 1px solid rgba(0, 0, 0, .25);
  border-radius: 1rem;
  box-sizing: border-box;
  height: 3rem;
  font-size: 16px;
  padding: 1rem;
  -webkit-transition: border ease-in 0.25s;
  transition: border ease-in 0.25s;
}

.emotion-2:focus,
.emotion-2:hover {
  outline: unset;
  border-color: #F1694B;
  box-shadow: 0 2px 4px 0 rgba(241,105,75,0.15);
}

.emotion-2:disabled {
  pointer-events: none;
  background-color: rgba(154,152,151,0.15);
}

.emotion-2:-moz-read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-2:read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-3 {
  color: rgba(154,152,151,0.85);
  font-size: 12px;
  margin: 0;
  margin-left: 0.5rem;
  margin-top: 0.25rem;
}

<div>
  <div
    class="emotion-0"
    value="value"
  >
    <div
      class="emotion-1"
    >
      <input
        class="emotion-2"
        value="value"
      />
    </div>
    <div
      style="display: flex;"
    >
      <div
        style="flex: 1;"
      >
        <p
          class="emotion-3"
          color="grey.400"
        >
          This is a helper text
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`input/text-field should render a TextField with a limit 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-2 {
  position: relative;
  border: 1px solid rgba(0, 0, 0, .25);
  border-radius: 1rem;
  box-sizing: border-box;
  height: 3rem;
  font-size: 16px;
  padding: 1rem;
  -webkit-transition: border ease-in 0.25s;
  transition: border ease-in 0.25s;
}

.emotion-2:focus,
.emotion-2:hover {
  outline: unset;
  border-color: #F1694B;
  box-shadow: 0 2px 4px 0 rgba(241,105,75,0.15);
}

.emotion-2:disabled {
  pointer-events: none;
  background-color: rgba(154,152,151,0.15);
}

.emotion-2:-moz-read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-2:read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-3 {
  color: rgba(154,152,151,0.85);
  font-size: 12px;
  margin: 0;
  text-align: right;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
  margin-top: 0.25rem;
}

<div>
  <div
    class="emotion-0"
    value="value"
  >
    <div
      class="emotion-1"
    >
      <input
        class="emotion-2"
        maxlength="10"
        value="value"
      />
    </div>
    <div
      style="display: flex;"
    >
      <div
        style="flex: 1;"
      />
      <p
        class="emotion-3"
        color="grey.400"
      >
        5
        /10
      </p>
    </div>
  </div>
</div>
`;

exports[`input/text-field should render a TextField with a valid state 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-1::before,
.emotion-1::after {
  content: '';
  display: block;
  top: 50%;
  position: absolute;
  right: 1rem;
}

.emotion-1::before {
  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16 0H0V16H16V0Z' fill='white' fill-opacity='0.01'/%3E%3Cpath d='M3.33301 7.99996L6.66634 11.3333L13.333 4.66663' stroke='white' stroke-width='1.33333' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
  height: 1rem;
  -webkit-transform: translate(-14%, -50%);
  -moz-transform: translate(-14%, -50%);
  -ms-transform: translate(-14%, -50%);
  transform: translate(-14%, -50%);
  width: 1rem;
  z-index: 1;
}

.emotion-1::after {
  background-color: #59BC6F;
  border-radius: 0.625rem;
  height: 1.25rem;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 1.25rem;
}

.emotion-2 {
  position: relative;
  border: 1px solid rgba(0, 0, 0, .25);
  border-radius: 1rem;
  border-color: #59BC6F;
  box-sizing: border-box;
  height: 3rem;
  font-size: 16px;
  padding: 1rem;
  -webkit-transition: border ease-in 0.25s;
  transition: border ease-in 0.25s;
}

.emotion-2:focus,
.emotion-2:hover {
  outline: unset;
  border-color: #F1694B;
  border-color: #59BC6F;
  box-shadow: 0 2px 4px 0 rgba(241,105,75,0.15);
  box-shadow: 0 2px 4px 0 rgba(89,188,111,0.15);
}

.emotion-2:disabled {
  pointer-events: none;
  background-color: rgba(154,152,151,0.15);
}

.emotion-2:-moz-read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-2:read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

<div>
  <div
    class="emotion-0"
    value="value"
  >
    <div
      class="emotion-1"
    >
      <input
        class="emotion-2"
        value="value"
      />
    </div>
  </div>
</div>
`;

exports[`input/text-field should render a TextField with an error message (from error object) 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-1::before,
.emotion-1::after {
  content: '';
  display: block;
  top: 50%;
  position: absolute;
  right: 1rem;
}

.emotion-1::before {
  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16 0H0V16H16V0Z' fill='white' fill-opacity='0.01'/%3E%3Cpath d='M4.66699 4.66663L11.3337 11.3333' stroke='white' stroke-width='1.33333' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M4.66699 11.3333L11.3337 4.66663' stroke='white' stroke-width='1.33333' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
  height: 1rem;
  -webkit-transform: translate(-14%, -50%);
  -moz-transform: translate(-14%, -50%);
  -ms-transform: translate(-14%, -50%);
  transform: translate(-14%, -50%);
  width: 1rem;
  z-index: 1;
}

.emotion-1::after {
  background-color: #EB5757;
  border-radius: 0.625rem;
  height: 1.25rem;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 1.25rem;
}

.emotion-2 {
  position: relative;
  border: 1px solid rgba(0, 0, 0, .25);
  border-radius: 1rem;
  border-color: #EB5757;
  box-sizing: border-box;
  height: 3rem;
  font-size: 16px;
  padding: 1rem;
  -webkit-transition: border ease-in 0.25s;
  transition: border ease-in 0.25s;
}

.emotion-2:focus,
.emotion-2:hover {
  outline: unset;
  border-color: #F1694B;
  border-color: #EB5757;
  box-shadow: 0 2px 4px 0 rgba(241,105,75,0.15);
  box-shadow: 0 2px 4px 0 rgba(235,87,87,0.15);
}

.emotion-2:disabled {
  pointer-events: none;
  background-color: rgba(154,152,151,0.15);
}

.emotion-2:-moz-read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-2:read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-3 {
  color: #EB5757;
  font-size: 12px;
  margin: 0;
  margin-left: 0.5rem;
  margin-top: 0.25rem;
}

<div>
  <div
    class="emotion-0"
    value="value"
  >
    <div
      class="emotion-1"
    >
      <input
        class="emotion-2"
        value="value"
      />
    </div>
    <div
      style="display: flex;"
    >
      <div
        style="flex: 1;"
      >
        <p
          class="emotion-3"
          color="red.500"
        >
          This is an error message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`input/text-field should render a TextField with an error message (from string) 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-1::before,
.emotion-1::after {
  content: '';
  display: block;
  top: 50%;
  position: absolute;
  right: 1rem;
}

.emotion-1::before {
  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16 0H0V16H16V0Z' fill='white' fill-opacity='0.01'/%3E%3Cpath d='M4.66699 4.66663L11.3337 11.3333' stroke='white' stroke-width='1.33333' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M4.66699 11.3333L11.3337 4.66663' stroke='white' stroke-width='1.33333' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
  height: 1rem;
  -webkit-transform: translate(-14%, -50%);
  -moz-transform: translate(-14%, -50%);
  -ms-transform: translate(-14%, -50%);
  transform: translate(-14%, -50%);
  width: 1rem;
  z-index: 1;
}

.emotion-1::after {
  background-color: #EB5757;
  border-radius: 0.625rem;
  height: 1.25rem;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 1.25rem;
}

.emotion-2 {
  position: relative;
  border: 1px solid rgba(0, 0, 0, .25);
  border-radius: 1rem;
  border-color: #EB5757;
  box-sizing: border-box;
  height: 3rem;
  font-size: 16px;
  padding: 1rem;
  -webkit-transition: border ease-in 0.25s;
  transition: border ease-in 0.25s;
}

.emotion-2:focus,
.emotion-2:hover {
  outline: unset;
  border-color: #F1694B;
  border-color: #EB5757;
  box-shadow: 0 2px 4px 0 rgba(241,105,75,0.15);
  box-shadow: 0 2px 4px 0 rgba(235,87,87,0.15);
}

.emotion-2:disabled {
  pointer-events: none;
  background-color: rgba(154,152,151,0.15);
}

.emotion-2:-moz-read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-2:read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-3 {
  color: #EB5757;
  font-size: 12px;
  margin: 0;
  margin-left: 0.5rem;
  margin-top: 0.25rem;
}

<div>
  <div
    class="emotion-0"
    value="value"
  >
    <div
      class="emotion-1"
    >
      <input
        class="emotion-2"
        value="value"
      />
    </div>
    <div
      style="display: flex;"
    >
      <div
        style="flex: 1;"
      >
        <p
          class="emotion-3"
          color="red.500"
        >
          This is an error message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`input/text-field should render a TextField with error 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-1::before,
.emotion-1::after {
  content: '';
  display: block;
  top: 50%;
  position: absolute;
  right: 1rem;
}

.emotion-1::before {
  background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16 0H0V16H16V0Z' fill='white' fill-opacity='0.01'/%3E%3Cpath d='M4.66699 4.66663L11.3337 11.3333' stroke='white' stroke-width='1.33333' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M4.66699 11.3333L11.3337 4.66663' stroke='white' stroke-width='1.33333' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
  height: 1rem;
  -webkit-transform: translate(-14%, -50%);
  -moz-transform: translate(-14%, -50%);
  -ms-transform: translate(-14%, -50%);
  transform: translate(-14%, -50%);
  width: 1rem;
  z-index: 1;
}

.emotion-1::after {
  background-color: #EB5757;
  border-radius: 0.625rem;
  height: 1.25rem;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 1.25rem;
}

.emotion-2 {
  position: relative;
  border: 1px solid rgba(0, 0, 0, .25);
  border-radius: 1rem;
  border-color: #EB5757;
  box-sizing: border-box;
  height: 3rem;
  font-size: 16px;
  padding: 1rem;
  -webkit-transition: border ease-in 0.25s;
  transition: border ease-in 0.25s;
}

.emotion-2:focus,
.emotion-2:hover {
  outline: unset;
  border-color: #F1694B;
  border-color: #EB5757;
  box-shadow: 0 2px 4px 0 rgba(241,105,75,0.15);
  box-shadow: 0 2px 4px 0 rgba(235,87,87,0.15);
}

.emotion-2:disabled {
  pointer-events: none;
  background-color: rgba(154,152,151,0.15);
}

.emotion-2:-moz-read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-2:read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-3 {
  color: #EB5757;
  font-size: 12px;
  margin: 0;
  margin-left: 0.5rem;
  margin-top: 0.25rem;
}

<div>
  <div
    class="emotion-0"
    value="Default value"
  >
    <div
      class="emotion-1"
    >
      <input
        class="emotion-2"
        value="Default value"
      />
    </div>
    <div
      style="display: flex;"
    >
      <div
        style="flex: 1;"
      >
        <p
          class="emotion-3"
          color="red.500"
        >
          error message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`input/text-field should render a TextField with label 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  font-size: 12px;
  margin: 0;
  margin-left: 0.5rem;
  margin-bottom: 0.25rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-3 {
  position: relative;
  border: 1px solid rgba(0, 0, 0, .25);
  border-radius: 1rem;
  box-sizing: border-box;
  height: 3rem;
  font-size: 16px;
  padding: 1rem;
  -webkit-transition: border ease-in 0.25s;
  transition: border ease-in 0.25s;
}

.emotion-3:focus,
.emotion-3:hover {
  outline: unset;
  border-color: #F1694B;
  box-shadow: 0 2px 4px 0 rgba(241,105,75,0.15);
}

.emotion-3:disabled {
  pointer-events: none;
  background-color: rgba(154,152,151,0.15);
}

.emotion-3:-moz-read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-3:read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

<div>
  <div
    class="emotion-0"
    value="Default value"
  >
    <label
      class="emotion-1"
      style="display: block;"
    >
      TextField Label
    </label>
    <div
      class="emotion-2"
    >
      <input
        class="emotion-3"
        value="Default value"
      />
    </div>
  </div>
</div>
`;

exports[`input/text-field should render a disabled TextField 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
}

.emotion-2 {
  position: relative;
  border: 1px solid rgba(0, 0, 0, .25);
  border-radius: 1rem;
  box-sizing: border-box;
  height: 3rem;
  font-size: 16px;
  padding: 1rem;
  -webkit-transition: border ease-in 0.25s;
  transition: border ease-in 0.25s;
}

.emotion-2:focus,
.emotion-2:hover {
  outline: unset;
  border-color: #F1694B;
  box-shadow: 0 2px 4px 0 rgba(241,105,75,0.15);
}

.emotion-2:disabled {
  pointer-events: none;
  background-color: rgba(154,152,151,0.15);
}

.emotion-2:-moz-read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

.emotion-2:read-only {
  background-color: white;
  border-color: white;
  margin-left: -2px;
  padding: 0.5rem;
  pointer-events: none;
}

<div>
  <div
    class="emotion-0"
    value="value"
  >
    <div
      class="emotion-1"
      disabled=""
    >
      <input
        class="emotion-2"
        disabled=""
        value="value"
      />
    </div>
  </div>
</div>
`;
